# deno_audio

./: .gitignore  Cargo.toml  README.md  core_type.ts  detect.ts  example.ts  example_mp3.ts  lib.rs  mod.ts  op.ts  plugin.ts
.github/workflows/: checks.yml  release.yml
bindings/: bindings.ts
